aws-k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: zomato-ingress
  namespace: zomato
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:547446189705:certificate/8361ce9f-02fb-4396-8a6a-97fa03ded136
    alb.ingress.kubernetes.io/ssl-redirect: '443'
spec:
  ingressClassName: alb
  rules:
    - host: tankandpets.shop
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: zomato-frontend-svc
                port:
                  number: 80
